# groupedfrontend

./: LICENCE  README.md  pyproject.toml  setup.py
src/groupedfrontend/: compression.py  filter_params.py  filterbanks.py  filterparams.py  frontend.py  log1p.py  temporalbatchnorm.py
src/test/: test_filters.py  test_groupedfrontend.py
