[build-system]
requires = ["flit_core>=3.2", "torch>=1.11", "numpy>=1.20"]
build-backend = "flit_core.buildapi"

[project]
name = "groupedfrontend"
version = "0.1"
authors = [
  { name="Mark Anderson", email="andersm3@tcd.ie" },
]
description = "A non-learnable frontend based on EfficientLEAF with Gabor and Gamma filters"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
